WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115658
Cherry-pick fixes to bignum from upstream
https://bugs.webkit.org/show_bug.cgi?id=115658
Summary
Cherry-pick fixes to bignum from upstream
Cosmin Truta
Reported
2013-05-06 10:00:19 PDT
A defect in bignum was fixed recently, and I think we should pick that up. While at it, I am also picking up an older patch meant to reduce the differences from upstream and make diff'ing easier. (This one is not really a "fix", since it has been fixed in the WebKit code already, albeit differently.)
Attachments
Patch
(3.78 KB, patch)
2013-05-06 10:02 PDT
,
Cosmin Truta
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cosmin Truta
Comment 1
2013-05-06 10:02:32 PDT
Created
attachment 200717
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-06 10:49:03 PDT
Comment on
attachment 200717
[details]
Patch Clearing flags on attachment: 200717 Committed
r149609
: <
http://trac.webkit.org/changeset/149609
>
WebKit Commit Bot
Comment 3
2013-05-06 10:49:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug