Cherry-pick fixes to bignum from upstream https://bugs.webkit.org/show_bug.cgi?id=115658

Patch by Cosmin Truta <ctruta@blackberry.com> on 2013-05-06
Reviewed by Darin Adler.

Cherry-picked the following change lists:

Fix bug in bignum implementation
http://codereview.chromium.org/13454019

Make VS2005 project files compile without errors
http://codereview.chromium.org/6286135

* wtf/dtoa/bignum.cc:

Canonical link: https://commits.webkit.org/134073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149609 268f45cc-cd09-0410-ab3c-d52691b4dbfc